@@ -77,13 +77,13 @@ depend:
 callstat.o: libs.h ../lib/structs.h taskutil.h callstat.h
 nodelist.o: libs.h ../lib/structs.h taskutil.h nodelist.h
 scanout.o: libs.h ../lib/structs.h taskutil.h scanout.h
-taskcomm.o: libs.h taskstat.h taskregs.h taskdisk.h taskinfo.h taskutil.h taskcomm.h
+taskcomm.o: libs.h ../lib/structs.h taskstat.h taskregs.h taskdisk.h taskinfo.h taskutil.h taskcomm.h
 taskinfo.o: libs.h ../lib/structs.h taskinfo.h
 taskstat.o: libs.h ../lib/structs.h taskstat.h callstat.h outstat.h taskutil.h
 mbtask.o: libs.h ../lib/structs.h signame.h taskstat.h taskutil.h taskregs.h taskcomm.h callstat.h outstat.h nodelist.h mbtask.h
 outstat.o: libs.h ../lib/structs.h taskutil.h taskstat.h scanout.h nodelist.h callstat.h outstat.h
 signame.o: signame.h
-taskdisk.o: libs.h taskdisk.h taskutil.h
-taskregs.o: libs.h taskstat.h taskregs.h taskutil.h
+taskdisk.o: libs.h ../lib/structs.h taskdisk.h taskutil.h
+taskregs.o: libs.h ../lib/structs.h taskstat.h taskregs.h taskutil.h
 taskutil.o: libs.h ../lib/structs.h signame.h scanout.h taskutil.h
 # End of generated dependencies
