@@ -1,8 +1,7 @@
 /*****************************************************************************
  *
- * File ..................: mbtask/statdisk.c
+ * $Id$
  * Purpose ...............: Give status of all filesystems
- * Last modification date : 29-Oct-2001
  *
  *****************************************************************************
  * Copyright (C) 1997-2001
@@ -30,6 +29,7 @@
  *****************************************************************************/
 
 #include "libs.h"
+#include "../lib/structs.h"
 #include "taskdisk.h"
 #include "taskutil.h"
 
