@@ -4394,6 +4394,8 @@ v0.33.19        26-Oct-2001
 		Implemented Txx nodelist flags, FSC-0062.
 		Added code to see which nodes could be called depending on
 		outbound status, nodelist flags etc. Experimental.
+		Added code to do outbound calling, experimental. Calling
+		systems in parallel is now possible.
 
 	mbmon:
 		Changed the lastcaller screen to display the External Door
